name:                persistent-mapper
version:             0.1.0.0
-- synopsis:
description:         Helpers to for creating PersistEntity instances mapping arbitrary structures to database records
homepage:            https://github.com/SatsumaLabs/persistent-mapper#readme
license:             MIT
license-file:        LICENSE
author:              George Steel
maintainer:          george.steel@gmail.com
copyright:           2019 George Steel
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  exposed-modules:     Database.Persist.Mapper.ClassHelpers
                     , Database.Persist.Mapper.Util
  build-depends:       base >= 4.7 && < 5
                     , text
                     , persistent
                     , lens
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SatsumaLabs/persistent-mapper
